--- a/index.css
+++ b/index.css
@@ -1,8 +1,35 @@
 .form,
 .greeting{
-    display: none;
+}
+
+.form{
+    margin-top: 100px;
 }
 
 .showing{
     display:block ;
+}
+
+body{
+    background-color: #95a5a6;
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    align-items: center;
+}
+
+.clock{
+    color: #34495e;
+    margin-top: 100px;
+    font-size: 100px;
+}
+
+.clock-title{
+    height: 200px;
+    margin: 0px;
+}
+
+.greeting{
+    margin-top: 100px;
+    font-size: 50px;
 }
