--- a/css/index.css
+++ b/css/index.css
@@ -1,36 +1,44 @@
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
 .form,
 .greeting{
     display: none;
-}
-
-.form{
-    margin-top: 100px;
 }
 
 .showing{
     display:block ;
 }
 
+.bgImg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
+}
+
+
 body{
-    background-color: #95a5a6;
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
-    align-items: center;
+    background-color: #2c3e50;
+}
+
+.form{
 }
 
 .clock{
-    color: #34495e;
-    margin-top: 100px;
-    font-size: 100px;
 }
 
 .clock-title{
-    height: 200px;
-    margin: 0px;
 }
 
 .greeting{
-    margin-top: 100px;
-    font-size: 50px;
 }
