--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url("reset.css")
+
 @keyframes fadeIn{
     from{
         opacity: 0;
@@ -29,6 +31,21 @@
 
 body{
     background-color: #2c3e50;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    height: 80vh;
+}
+
+.center-column{
+    padding: 30px;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 30%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
 }
 
 .form{
